Fix browse button becoming too big

--- a/public/src/css/view.css
+++ b/public/src/css/view.css
@@ -454,6 +454,7 @@ kbd{
 }
 .plugin-browse-button{
 	position: relative;
+	overflow: hidden;
 }
 #plugin-browse{
 	position: absolute;
